# 3D_viewer

./: README.md
viewer/: Dockerfile  Makefile  docker-compose.yaml
viewer/controller/: camera_controller.cc  camera_controller.h  obj_controller.cc  obj_controller.h
viewer/documentation/: Doxyfile
viewer/model/: camera_model.cc  camera_model.h  obj_model.cc  obj_model.h
viewer/tests/: test.cc  test.h  test_main.cc
viewer/view/: CMakeLists.txt  CMakeLists.txt.user.3dfc34e  file_operations.cc  gl_widget.cc  gl_widget.h  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  settings_operations.cc
viewer/view/QtGifImage/giflib/: gif_lib.h
viewer/view/qrc/: fragmentShader.glsl  qrc.qrc  vertexShader.glsl
